--- a/estilos.css
+++ b/estilos.css
@@ -86,7 +86,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("/images/img1.jpg");
+    ,url("./images/img1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
