--- a/estilos.css
+++ b/estilos.css
@@ -104,7 +104,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("/images/fondo.jpg");
+    ,url("./images/fondo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -146,7 +146,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("/images/front-end.jpg");
+    ,url("./images/front-end.jpg");
 }
 
 .carta:nth-child(2){
@@ -155,7 +155,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("/images/full-stack.jpg");
+    ,url("./images/full-stack.jpg");
 }
 
 .carta:nth-child(3){
@@ -164,7 +164,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("/images/python.jpg");
+    ,url("./images/python.jpg");
 }
 footer{
     background-color: rgb(230,230,230);
@@ -242,7 +242,7 @@ footer .container{
             0deg,
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
-        ), url("/images/programador_98.jpg");
+        ), url("./images/programador_98.jpg");
         background-size: cover;
         background-position: center center;
         height: 600px;
