--- a/estilos.css
+++ b/estilos.css
@@ -104,7 +104,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("./images/fondo.jpg");
+    ,url("../images/fondo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
